# hp606n-battery-tester

./: Cargo.toml  README.md
src/: cli_struct.rs  errors.rs  main.rs
standalone/: HOW TO SAVE CONFIGS.txt  custom config.bat
