[package]
name = "hp606n-battery-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.51"
reqwest = "0.11.22"
prologix-gpib-ethernet-controller-manager = "0.1.1"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
chrono = "0.4.31"
tokio = { version = "1.35.0", features = ["full"] }
log = "0.4.20"

